--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,9 @@
         - what issues are outstanding with comment section?
 
         this is where I a currently am: 
-            -- need to walk through each situation, make sure the change count from Comment.jsx makes the correct UI adjustment in NoCommentTease.jsx --- here!
-             - see !here in Comment.jsx to find place again... 
+            -- need to walk through each situation 
+                - user has left a quick review but no comment -- here!
+                    - leaves blank comment, see sendToDataBase for here!
                 - // user logged in and is owner of one of the many comments @ count 4
                     - it shows the same comment at top for each user, want it to show the logged in users comment first
                     - if see less comments is active, then it shows the 2nd comment avatar, if it is closed then when opened the 2nd comment avatar is not seen
