--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,5 @@
 1. frontend
-    - add filter logic
-        - when clicking on filter sort list by those venues that have a rating for that filter - here!
-            -- see here on sortVenues.js
-    - add info to map markers
+    - add info to map markers - here!
     - change hearts to faces
 
 4. Bugs 
